# robotino2-wrapper

./: CMakeLists.txt  README.md
cmake/: Robotino2Config.cmake.in
doc/: CMakeLists.txt
example/: CMakeLists.txt  move_forward.cpp
src/: CMakeLists.txt  robotino2.cpp  robotino2.hpp
tests/: CMakeLists.txt  main.cpp
